# rust-timsort

./: Cargo.toml  LICENSE-MIT
.github/workflows/: ci.yaml
benches/: bench.rs  bench_default.rs
src/: find_run.rs  gallop.rs  insort.rs  lib.rs  merge.rs  sort.rs
src/find_run/: mod.rs  tests.rs
src/gallop/: tests.rs
src/insort/: mod.rs  tests.rs
src/merge/: mod.rs  tests.rs
src/sort/: mod.rs  tests.rs
