[package]
name = "timsort"
version = "0.1.2"
description = "Rust implementation of the modified MergeSort used in Python and Java"
repository = "https://github.com/RustPython/rust-timsort"
authors = ["Michael Howell <michael@notriddle.com>", "RustPython Team"]
license = "MIT/Apache-2.0"
edition = "2018"

[dev-dependencies]
rand = { version = "0.7", features = ["small_rng"] }

